@@ -2,7 +2,7 @@
 /***************************************************************
 *  Copyright notice
 *
-*  (c) Francois Suter <typo3@cobweb.ch>
+*  (c) 2008-2012 Francois Suter (Cobweb) <typo3@cobweb.ch>
 *  All rights reserved
 *
 *  This script is part of the TYPO3 project. The TYPO3 project is
@@ -27,7 +27,7 @@
 
 
 /**
- * This provides helpers for displaying custom fields in the extension configuration screen
+ * This class provides a custom field for the extension configuration screen
  *
  * @author		Francois Suter (Cobweb) <typo3@cobweb.ch>
  * @package		TYPO3
@@ -43,12 +43,11 @@ class tx_tesseract_emconfhelper {
 	}
 
 	/**
-	 * This method renders a selector with all black or white word lists
+	 * Returns a list with the status of all "core" Tesseract extensions
 	 *
-	 * @param	array				$params: Information about the field to be rendered
-	 * @param	t3lib_tsStyleConfig	$pObj: The calling parent object.
-	 * @param	string				$type: The type of list to fetch (black or white)
-	 * @return	string				The HTML selector
+	 * @param array	 $params Information about the field to be rendered
+	 * @param t3lib_tsStyleConfig $pObj The calling parent object.
+	 * @return string The HTML selector
 	 */
 	public function installationCheck(array $params, t3lib_tsStyleConfig $pObj) {
 		$checkText = '<p style="margin-bottom: 10px;"><strong>' . $GLOBALS['LANG']->getLL('installationCheck.warning') . '</strong></p>';
@@ -59,40 +58,30 @@ class tx_tesseract_emconfhelper {
 	}
 
 	/**
-	 * This method prepares an installation status message for a given extension
+	 * Prepares an installation status message for a given extension
 	 *
-	 * @param	string	$extension: the extension key
-	 * @param	boolean	$status: true if extension is installed, false otherwise
-	 * @return	string	HTML for the message
+	 * @param string $extension The extension key
+	 * @param boolean $status True if extension is installed, false otherwise
+	 * @return string HTML for the message
 	 */
 	protected function wrapMessage($extension, $status) {
-		$message = '';
-			// Use flash messages if they exist (TYPO3 > 4.3)
-		if (class_exists('t3lib_FlashMessage')) {
-			$severity = t3lib_FlashMessage::OK;
-			$messageText = $GLOBALS['LANG']->getLL('installationCheck.extensionInstalled');
-			$title = $GLOBALS['LANG']->getLL('installationCheck.extension') . ': ' . $extension;
-			if (!$status) {
-				$severity = t3lib_FlashMessage::WARNING;
-				$messageText = $GLOBALS['LANG']->getLL('installationCheck.extensionNotInstalled');
-			}
-
-			$flashMessage = t3lib_div::makeInstance(
-				't3lib_FlashMessage',
-				$messageText,
-				$title,
-				$severity
-			);
-			$message .= $flashMessage->render();
-		} else {
-			$message .= '<h3>' . $GLOBALS['LANG']->getLL('installationCheck.extension') . ': ' . $extension . '</h3>';
-			if ($status) {
-				$message .= '<p>' . $GLOBALS['LANG']->getLL('installationCheck.extensionInstalled') . '</p>';
-			} else {
-				$message .= '<p style="font-weight: bold; color: #f00;">' . $GLOBALS['LANG']->getLL('installationCheck.extensionNotInstalled') . '</p>';
-			}
+			// Assemble flash messages and render it
+		$severity = t3lib_FlashMessage::OK;
+		$messageText = $GLOBALS['LANG']->getLL('installationCheck.extensionInstalled');
+		$title = $GLOBALS['LANG']->getLL('installationCheck.extension') . ': ' . $extension;
+		if (!$status) {
+			$severity = t3lib_FlashMessage::WARNING;
+			$messageText = $GLOBALS['LANG']->getLL('installationCheck.extensionNotInstalled');
 		}
-		return $message;
+
+			/** @var $flashMessage t3lib_FlashMessage */
+		$flashMessage = t3lib_div::makeInstance(
+			't3lib_FlashMessage',
+			$messageText,
+			$title,
+			$severity
+		);
+		return $flashMessage->render();
 	}
 }
 
