@@ -1,3 +1,7 @@
+2012-04-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Removed obsolete method tx_tesseract_utilities::wrapMessage(), resolves #32280
+
 2012-03-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Moved initEmptyDataStrucure() method to data provider base class instead of interface, resolves #35048
